--- a/InmobiliariaTp/app/src/main/res/navigation/mobile_navigation.xml
+++ b/InmobiliariaTp/app/src/main/res/navigation/mobile_navigation.xml
@@ -15,7 +15,11 @@
         android:id="@+id/nav_gallery"
         android:name="com.nadia.inmobiliariatp.ui.inmueble.InmueblesFragment"
         android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_inmuebles" />
+        tools:layout="@layout/fragment_inmuebles" >
+        <action
+            android:id="@+id/action_nav_gallery_to_detalleInmuebleFragment"
+            app:destination="@id/detalleInmuebleFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_slideshow"
@@ -37,4 +41,22 @@
         android:name="com.nadia.inmobiliariatp.ui.logout.LogoutFragment"
         android:label="fragment_logout"
         tools:layout="@layout/fragment_logout" />
+    <fragment
+        android:id="@+id/crearInmuebleFragment"
+        android:name="com.nadia.inmobiliariatp.ui.inmueble.CrearInmuebleFragment"
+        android:label="fragment_crear_inmueble"
+        tools:layout="@layout/fragment_crear_inmueble" />
+    <activity
+        android:id="@+id/mainActivity"
+        android:name="com.nadia.inmobiliariatp.MainActivity"
+        android:label="fragment_inicio"
+        tools:layout="@layout/fragment_inicio" />
+    <fragment
+        android:id="@+id/detalleInmuebleFragment"
+        android:name="com.nadia.inmobiliariatp.ui.inmueble.DetalleInmuebleFragment"
+        android:label="DetalleInmuebleFragment" >
+        <action
+            android:id="@+id/action_detalleInmuebleFragment_to_nav_gallery2"
+            app:destination="@id/nav_gallery" />
+    </fragment>
 </navigation>
