--- a/InmobiliariaTp/app/src/main/res/layout/fragment_contratos.xml
+++ b/InmobiliariaTp/app/src/main/res/layout/fragment_contratos.xml
@@ -7,13 +7,11 @@
     android:layout_height="match_parent"
     tools:context=".ui.contratos.ContratosFragment" >
 
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="152dp"
-        android:text="Contratos"
-        android:textSize="20sp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/listaInmueblesContratos"
+        android:layout_width="409dp"
+        android:layout_height="729dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
