--- a/InmobiliariaTp/app/src/main/res/layout/fragment_detalle_inmueble.xml
+++ b/InmobiliariaTp/app/src/main/res/layout/fragment_detalle_inmueble.xml
@@ -69,7 +69,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tvAmbientes" />
 
     <TextView
-        android:id="@+id/tvDireccion"
+        android:id="@+id/tvFechaPago"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -90,7 +90,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.099"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvDireccion" />
+        app:layout_constraintTop_toBottomOf="@+id/tvFechaPago" />
 
     <TextView
         android:id="@+id/tvPrecio"
